--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\user\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=/Users/sarahhaddad/Library/Android/sdk
+flutter.sdk=/Users/sarahhaddad/development/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
